Adjustments to testing and api-endpoints added - we are now testing the controller instead of creating a user by constructor - added role adding testing - some smaller adjustments to JWT/auth logic